--- a/css/style.css
+++ b/css/style.css
@@ -121,20 +121,18 @@ body{
 .social-icon .fa-linkedin-in{
     color: rgb(2, 103, 185);
 }
+.social-icon:hover{
+    background-color: rgba(200, 200, 200, 1);
+}
 
 .container{
     max-width: 1170px;
     margin-right: auto;
     margin-left: auto;
-    padding-top: 100px;
-    padding-right: 15px;
-    padding-bottom: 100px;
-    padding-left: 15px;
 }
-.wrapper-content{
-    display: flex;
-
-    justify-content: space-between;
+.section-about-me{
+    padding-top: 100px;
+    padding-bottom: 120px;
 }
 .about-photo{
     max-width: 470px;
@@ -166,8 +164,11 @@ body{
 
     list-style-type: circle;
 }
-/* site */
-.container-fluid{
+/* portfolio */
+.section-portfolio{
+    padding-top: 90px;
+    padding-bottom: 120px;
+
     background-color: #292929;
 }
 .title{
@@ -217,4 +218,97 @@ body{
 }
 .site-wrap__desc a:hover{
     color: #f2cd38;
+}
+.section-title-wrapper{
+    display: flex;
+    flex-direction: column;
+
+    margin-bottom: 80px;
+
+    align-items: center;
+}
+
+.section-title{
+    font-size: 58px;
+    font-weight: 700;
+
+    margin-top: 0;
+    margin-bottom: 10px;
+
+    color: #fff;
+}
+.section-subtitle{
+    font-size: 36px;
+    font-weight: 400;
+
+    margin-top: 0;
+    margin-bottom: 0;
+
+    color: #fff;
+}
+
+.section-contact{
+    padding-top: 100px;
+    padding-bottom: 120px;
+
+    color: #fff;
+    background-color: #171717;
+}
+.row{
+    display: flex;
+}
+.space-between{
+    justify-content: space-between;
+}
+.contact-item{
+    display: flex;
+    flex-direction: column;
+
+    width: 33%;
+    margin-right: 30px;
+    padding-top: 70px;
+    padding-bottom: 90px;
+
+    transition: background-color all 0.2s ease-in, transform 0.3s ease-in;
+    text-decoration: none;
+
+    color: #fff;
+    background-color: #8e8e8e;
+
+    -webkit-justify-content: center;
+            justify-content: center;
+    -webkit-align-items: center;
+            align-items: center;
+}
+.contact-item:last-child{
+    margin-right: 0;
+}
+.contact-item:hover{
+    transform: scale(1.2);
+}
+.contact-item--vk{
+    background-color: rgba(69, 102, 142, 0.5);
+}
+.contact-item--vk:hover{
+    background-color: rgba(69, 102, 142, 1);
+}
+.contact-item--email{
+    background-color: rgba(226, 166, 3, 0.5);
+}
+.contact-item--email:hover{
+    background-color: rgba(226, 166, 3, 1);
+}
+.contact-item--tg{
+    background-color: rgba(0, 136, 204, 0.5);
+}
+.contact-item--tg:hover{
+    background-color: rgba(0, 136, 204, 1);
+}
+.contact-item-icon{
+    font-size: 90px;
+
+    margin-bottom: 20px;
+}
+.contact-item-text{
+    font-size: 36px;
 }
